added color blobs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,3 +62,18 @@
         scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
     }
 }
+
+
+/* -------------------------------- SHEEN BG -------------------------------- */
+/* .sheen-bg {
+    background-color: ;
+}
+
+@keyframes sheen-bg {
+    from {
+
+    }
+    to {
+
+    }
+} */
